# twister-splitter

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile.windows  LICENSE  README.md  build-windows.sh
.cargo/: config.toml
.claude/agents/: egui-designer.md  nesting-backend.md
.github/workflows/: windows-gui.yml
assets/fonts/: NOTICE.md
docs/: backend-changes.md  windows-gui-build-scope.md
fixtures/: gengar-stacked.dxf
src/: diag.rs  emit.rs  extract.rs  flatten.rs  geom.rs  gui.rs  lib.rs  main.rs  nest.rs  optimize.rs  pack.rs  stats.rs  svg.rs
tests/: engrave_sequence.rs  extract_meta.rs  flatten_fixture.rs  geometry_types.rs  kerf_comp.rs  margin_fixture.rs  micro_tabs.rs  mirror_emit.rs  nest_control.rs  nest_pipeline.rs  packing.rs  pin_renest.rs  pipeline.rs  placement_ops.rs  quantity.rs  split_layers.rs  stats_fixture.rs  svg_export.rs
