[package]
name = "twister-splitter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
dxf = "0.6.1"
indicatif = "0.18.6"
jagua-rs = { version = "0.7.2", features = ["bpp"] }
rand = "0.10"
sparrow = { git = "https://github.com/JeroenGar/sparrow", rev = "961ec31f576c5817ece779ff73982b4553760a4e", version = "0.1.0" }
