[package]
name = "twister-splitter"
version = "0.1.0"
edition = "2024"
# `gui` is a default feature, so both binaries build and `cargo run` is otherwise
# ambiguous. Pin the default to the CLI/dispatcher binary (it launches the GUI
# when run with no args — see `main`).
default-run = "twister-splitter"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
dxf = "0.6.1"
indicatif = "0.18.6"
jagua-rs = { version = "0.7.2", features = ["bpp"] }
rand = "0.10"
sparrow = { git = "https://github.com/JeroenGar/sparrow", rev = "961ec31f576c5817ece779ff73982b4553760a4e", version = "0.1.0" }

# GUI-only dependencies (pulled in only with `--features gui`), so the CLI build
# stays lean. Glow (OpenGL) backend — 2D painting needs nothing heavier.
#
# The GUI deps are split into target-specific tables below so each platform pulls
# only what it needs (and, crucially, so cross-compiling to Windows drags in NO C
# dependencies): Windows uses winit's Win32 backend + rfd's native Win32 dialog;
# Linux uses x11/wayland + a GTK dialog; macOS uses Cocoa. `rfd`'s Win32/Cocoa
# backends are cfg-gated (not feature-gated), so `default-features = false` is all
# they need — only Linux requires an explicit dialog backend feature.
rfd = { version = "0.17", default-features = false, optional = true }

# Windows + macOS: eframe needs no extra windowing features (winit's Win32/Cocoa
# backends are always compiled). This also covers the Windows cross-compile.
[target.'cfg(not(all(unix, not(target_os = "macos"))))'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow"], optional = true }

# Linux/BSD: add the x11 + wayland windowing backends and a GTK file dialog.
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"], optional = true }
rfd = { version = "0.17", default-features = false, features = ["gtk3"], optional = true }

[features]
# GUI ships by default (bare `cargo run` opens the window; pass args for the CLI).
# Build the lean, CLI-only binary with `--no-default-features` (used by the
# Windows cross-compile to keep the exe free of eframe/MinGW C deps).
default = ["gui"]
# Desktop GUI. Enables the `twister-gui` binary and the `gui` library module.
gui = ["dep:eframe", "dep:rfd"]

# The desktop app as an explicit binary: `cargo run --bin twister-gui` (gui is a
# default feature, so no `--features gui` needed). `required-features` still
# guards it out of `--no-default-features` builds.
[[bin]]
name = "twister-gui"
required-features = ["gui"]

[dev-dependencies]
egui_kittest = { version = "0.35", features = ["wgpu", "snapshot"] }
